src/objects/Bike_Ride__c.object
<CustomObject>
    <fields>
        <fullName>Bike_Log__c</fullName>
        <label>Bike Log</label>
        <referenceTo>Bike_Log__c</referenceTo>
        <relationshipLabel>Bike Rides</relationshipLabel>
        <relationshipName>Bike_Rides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <label>Other Details</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bike Ride</label>
    <nameField>
        <label>Bike Ride Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bike Rides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>